--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -134,7 +134,7 @@ sampling individuals from the population). } \label{table:IBDprobs}
 
 \begin{question}
 What are $r_0$, $r_1$, and $r_2$ for 1/2 sibs? (1/2 sibs share one
-parent but not the other)
+parent but not the other).
 \end{question}
 
 %{\bf Q}\arabic{Question} \refstepcounter{Question} 
@@ -206,6 +206,9 @@ and two degrees of freedom (as $p$ and $q$ have to sum to one).
 Therefore, any combination of genotype frequencies at a biallelic site
 can be specified by a combination of $p$ and $F$.\\
 
+\begin{question}
+The frequency of the $A_1$ allele is p the frequency of the $A_2$ allele is q. Assume that our population is randomly mating and that the genotype frequencies in the population follow from HW. We select two individuals at random to mate from this population. We then mate the children from this cross. What is the probability that the child from this sib-mating is homozygous? 
+\end{question}
 
 \subsection{Calculating inbreeding coefficients from data}
 If the observed heterozygosity in a population is $H_O$, and we assume that the generalized Hardy--Weinberg proportions hold, we can set $H_O$ equal to $f_{12}$, and solve Eq.\ \eqref{eq:hetGenHW} for $F$ to obtain an estimate of the inbreeding coefficient as
