--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -33,18 +33,16 @@ empirical demonstration of Hardy-Weinberg proportions.
 
 %{\bf Q}\arabic{Question} \refstepcounter{Question} 
 
-\begin{question} 
-Suppose the following genotype frequencies were observed for at an esterase locus in a population of Drosophila (A denotes the “fast” allele and B denotes the “slow” allele): 
-\begin{center}
-\begin{tabular}{|ccc|}
-AA &	AB &	BB\\
-0.6 &	0.2 &	0.2\\
-\end{tabular}\,.
-\end{center}
-What genotype frequencies would you expect under Hardy Weinberg expectations?
-\end{question}
-
-
+%\begin{question} 
+%Suppose the following genotype frequencies were observed for at an esterase locus in a population of Drosophila (A denotes the “fast” allele and B denotes the “slow” allele): 
+%\begin{center}
+%\begin{tabular}{|ccc|}
+%AA &	AB &	BB\\
+%0.6 &	0.2 &	0.2\\
+%\end{tabular}\,.
+%\end{center}
+%What genotype frequencies would you expect under Hardy Weinberg expectations?
+%\end{question}
 
 \begin{question} 
 You are investigating a locus with three alleles, A, B, and C, with
@@ -99,7 +97,7 @@ some examples. \\
 \begin{center}
 \includegraphics[width= \textwidth]{figures/IBD_0_1_2.png}
 \end{center}
-\caption{ Diploid individuals sharing alleles identical by descent,
+\caption{Three pairs of diploid individuals sharing 0, 1, or 2 alleles IBD
   where lines show the sharing of alleles by descent (e.g. from a
   shared ancestor). } \label{fig:IBD_0_1_2}
 \end{figure}
@@ -229,8 +227,14 @@ over loci, $\bar{H}_O$ and $\bar{H}_E$, respectively. Note that, in principle, w
 
 %{\bf Q}\arabic{Question} \refstepcounter{Question} 
 \begin{question} 
-For the genotype frequencies observed at the esterase locus given
-above estimate the inbreeding coefficient (F). 
+Suppose the following genotype frequencies were observed for at an esterase locus in a population of Drosophila (A denotes the “fast” allele and B denotes the “slow” allele): 
+\begin{center}
+\begin{tabular}{|ccc|}
+AA &	AB &	BB\\
+0.6 &	0.2 &	0.2\\
+\end{tabular}\,.
+\end{center}
+What is the estimate of the inbreeding coefficient at the esterase locus?
 \end{question}
 
 %==Phenotypic resemblance between relatives ==
