--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -140,9 +140,9 @@ parent but not the other).
 Consider a biallelic locus where allele 1 is
 at frequency $p$, and two individuals who have IBD allele sharing
 probabilities $r_0$, $r_1$, $r_2$. \\
- {\bf A)} What is the probability that these
+What is the overall probability that these
 two individuals are both homozygous for allele 1?\\
-{\bf} What is the probability that both individuals heterozygotes? 
+%{\bf} What is the probability that both individuals heterozygotes? 
 \end{question}
 \subsection{Inbreeding}
 We can define an inbred individual as an individual whose parents are
