add genetic drift figures

--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -397,21 +397,21 @@ from population $k$ and estimate the set of $q_k$'s.
 
 %{\bf Q}\arabic{Question} \refstepcounter{Question}  
 \begin{question} 
-We have two populations where the frequency of allele
-$A_1$ at two SNPs ($A_1/A_2$)  is given by
+We have two populations where the frequency of capital allele
+at two SNPs ($A/a$ and $B/b$)  is given by
 \begin{center}
 \begin{tabular}{|ccc|}
 \hline
-Population & locus 1 & locus 2 \\
+Population & locus A & locus B \\
 \hline
-A & $0.1$ & $0.85$ \\
-B  & $0.95$ & $0.2$ \\
+1 & $0.1$ & $0.85$ \\
+2  & $0.95$ & $0.2$ \\
 \hline
 \end{tabular}
 \end{center}
-We sample an individual whose genotype is $A_1A_1$ at the first locus
-and $A_2A_2$ at the second. What
-is the probability that our indvidual comes from population 1 vs
+We sample an individual whose genotype is $AA$ at the first locus
+and $bb$ at the second. What
+is the posterior probability that our indvidual comes from population 1 vs
 population 2?
 Lets assume that with probability $q_1$ our individual draws an allele
 from population $1$ and that with probability $q_2=1-q_1$ they draw an allele from
