add genetic drift figures

--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -35,6 +35,15 @@ $t$ are non-identical is $H_t$. Assuming that the mutation rate is
 zero (or vanishing small), what is our level of heterozygosity in
 generation $t+1$?\\
 
+\begin{figure}
+\begin{center}
+\includegraphics[width= \textwidth]{figures/Loss_of_he_col_two_alleles.png}
+\end{center}
+\caption{Loss of heterozygosity over time, in the absence of new
+  mutations. A diploid population of 5 individuals over the
+  generations, with lines showing transmission. In the first
+  generation every individual is a heterozygote..} \label{fig:LossHet_two_alleles}
+\end{figure} 
 
 \begin{figure}
 \begin{center}
@@ -44,6 +53,8 @@ generation $t+1$?\\
   mutations. A diploid population of 5 individuals. In the first generation I colour every allele a different
 colour so we can track their descendants.} \label{fig:LossHet_many_alleles}
 \end{figure} 
+
+
 
 In the next generation ($t+1$) we are looking at the alleles in the
 offspring of generation $t$. If we randomly sample two alleles in generation
