add genetic drift question

--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -93,6 +93,11 @@ H_t =H_0 \exp \left(-\frac{t}{2N} \right)
 \end{equation}
 i.e. heterozygosity decays exponentially at a rate $1/(2N)$.
 
+\begin{question}
+You are in charge of maintaining a population of delta smelt in the Sacramento river delta. Using a large set of microsatellites you estimate that the mean level of heterozygosity in this population is 0.005. You set yourself a goal of maintaining a level of heterozygosity of at least 0.0049 for the next two hundred years. Assuming that the smelt have a generation time of 3 years, and that only genetic drift affects these loci. What is the smallest fully outbreeding population that you would need to maintain to meet this goal?
+(Note this is similar to the calculations being carried out by conservation biologists but my numbers are made up.). 
+\end{question}
+
 \subsection{Levels of diversity maintained by a balance between
  mutation and drift} \label{DriftMutationBalance}
 
