--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -81,12 +81,24 @@ population is expected to be homozygotes under Hardy-Weinberg?
 
 
 \subsection{Coefficient of kinship}
-We will define two alleles to be identical by descent if they are
+We will define two alleles to be identical by descent (IBD) if they are
 identical due to a common ancestor in the past few generations. For
 the moment, we ignore mutation, 
 and we will be more precise about what we mean by `past few generations' later on. For example, parent and child share exactly
 one allele identical by descent at a locus, assuming that the two
-parents of the child are randomly mated individuals from the population.\\
+parents of the child are randomly mated individuals from the
+population. In figure \ref{fig:IBD_cousins_cartoon} I show a pedigree
+demonstrating some configurations of IBD. \\
+
+\begin{figure}
+\begin{center}
+\includegraphics[width= 0.5 \textwidth]{figures/Child_first_cousins_Homozy_BD.png}
+\end{center}
+\caption{Alleles being transmitted through an inbred pedigree. The mum and the
+  aunt share two alleles identical by descent (IBD). The cousins share one
+  allele IBD. The offspring of first cousins being homozygous by
+  descent at a locus.} \label{fig:IBD_cousins_cartoon}  
+\end{figure}
 
 A key quantity is the probability that our pair of individuals share
 0, 1, or 2 alleles identical by descent (see Figure \ref{fig:IBD_0_1_2}). We denote these probabilities
@@ -101,6 +113,8 @@ some examples. \\
   where lines show the sharing of alleles by descent (e.g. from a
   shared ancestor). } \label{fig:IBD_0_1_2}
 \end{figure}
+
+
 
 One summary of relatedness that will be important is the probability that two alleles picked at random, one from each of the two different individuals $i$ and $j$, are identical by descent. We call this quantity the coefficient of kinship of individuals $i$ and $j$, and denote it by $F_{ij}$. It is calculated as
 \begin{equation}
@@ -144,6 +158,21 @@ What is the overall probability that these
 two individuals are both homozygous for allele 1?\\
 %{\bf} What is the probability that both individuals heterozygotes? 
 \end{question}
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[width= 0.5 \textwidth]{figures/Cousins_IBD_chromo_cartoon.png}
+\end{center}
+\caption{First cousins sharing a stretch of chromosome identical by
+  descent. The different grandparental diploid chromosomes are coloured so we
+  can track them and recombinations between them across the
+  generations. Notice that the identity by descent between the cousins persists for a long
+stretch of chromosome due to the limited number of generations for
+recombination.} \label{fig:IBD_cousins_chr_cartoon}  
+\end{figure}
+
+
 \subsection{Inbreeding}
 We can define an inbred individual as an individual whose parents are
 more closely related to each other than two random individuals drawn
@@ -157,7 +186,9 @@ through the pedigree.  This increased likelihood of being homozygous
 relative to an outbred individual is the most obvious effect of
 inbreeding. It is also the one that will be of most interest to us, as it
 underlies a lot of our ideas about inbreeding depression and
-population structure.\\
+population structure.  In figure \ref{fig:IBD_cousins_cartoon} our
+offspring of first cousins is homozygous by descent having received
+the same IBD allele via two different routes around an inbreeding loop.\\
 
 
 As the offspring receives a random allele from each parent ($i$ and $j$), the
