--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -314,8 +314,7 @@ that expected in the total population $H_T$, via $\fst$:
 \begin{equation}
 \fst = 1-\frac{H_S}{H_T}=1-\frac{2p_Sq_S}{2p_Tq_T} \label{eqn:FST}.
 \end{equation}
-If the total population contains the subpopulation then, as we will see
-below, due to the Wahlund effect (to be added)
+If the total population contains the subpopulation then
  $2p_Sq_S \leq
 2p_Tq_T$, and so $\fis \leq \fit$ and $\fst \geq 0$. We can
 relate the three $F$-statistics to each other as
@@ -327,6 +326,16 @@ Hence, the reduction in heterozygosity within individuals compared to that expec
 in the total population can be decomposed to the reduction in
 heterozygosity of individuals compared to the subpopulation, and the reduction in
 heterozygosity from the total population to that in the subpopulation.\\
+%n, as we will seebelow, due to the Wahlund effect (to be added)
+\begin{figure}
+\begin{center}
+\includegraphics[width= 0.5 \textwidth]{figures/FST_pig.png}
+\end{center}
+\caption{A diagram showing the heirachical nature of F statistics. We
+  can compare the heterozygosity on individuals ($H_i$), to that found
+by randomly drawing alleles from the sub-population ($H_S=2p_Sq_S$),
+to that found in the total population ($H_T=2p_Tq_T$). } \label{fig:IBD_cousins_chr_cartoon}  
+\end{figure}
 
 If we want a summary of
 population structure across multiple subpopulations, we can average $H_I$
