new site making approach, fixed broken image link

--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -152,7 +152,7 @@ to make this slightly easier on ourselves lets further assume that $t
 
 \begin{figure}
 \begin{center}
-\includegraphics[width= 0.8 \textwidth]{figures/Mut_drift_balance}
+\includegraphics[width= 0.8 \textwidth]{figures/Mut_drift_balance.png}
 \end{center}
 \caption{Mutation-drift balance. A diploid population of 5
   individuals. In the first generation everyone has the same
