moved coalescent sections earlier

--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -332,7 +332,7 @@ heterozygosity from the total population to that in the subpopulation.\\
 \begin{center}
 \includegraphics[width= 0.5 \textwidth]{figures/FST_pig.png}
 \end{center}
-\caption{A diagram showing the heirachical nature of F statistics. We
+\caption{A diagram showing the hierarchical nature of F statistics. We
   can compare the heterozygosity on individuals ($H_i$), to that found
 by randomly drawing alleles from the sub-population ($H_S=2p_Sq_S$),
 to that found in the total population ($H_T=2p_Tq_T$). } \label{fig:FST_pig}  
