--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -1,3 +1,5 @@
+% make clean all
+% make site deploy
 \documentclass[12pt,titlepage]{article}
 \usepackage[authoryear]{natbib}
 \bibliographystyle{genetics}
@@ -61,7 +63,7 @@
 \include{chapter-04}
 \include{chapter-05}
 \include{chapter-06}
-\include{chapter-07}
+%\include{chapter-07}
 \include{chapter-08}
 
 \end{document}
