--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -11,6 +11,8 @@
 \usepackage{marginnote}
 \usepackage{color}
 \usepackage{fullpage}
+\usepackage[hypertexnames=false]{hyperref}
+\hypersetup{colorlinks=true, urlcolor=blue, citecolor=black, linkcolor=black}
 
 \usepackage[normalem]{ulem}
 
